@@ -7,8 +7,8 @@
  * REVISIONS:
  *   CSH 01/08-2000 Created
  */
-#include <buffer.h>
 
+#include <buffer.h>
 
 
 __inline ULONG SkipToOffset(
